--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<center>
 
 			<p>
-				ceci est le site de l'<a href="https://www.ifr-reunion.re/" >ifr</a>
+				ceci est le site de l'<a href="https://www.facebook.fr/" >ifr</a>
 			</p>
 
 			<p>
