--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<!-- les listes  -->
 		La liste des courses : 
 		<ul>
-			<li>Fruits</li>
+			<li>champagne</li>
 			<li>Lait</li>
 			<li>Viande</li>
 			<li>Oeufs</li>
