--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<center>
 
 			<p>
-				ceci est le site de l'<a href="https://www.google.com/" >ifr</a>
+				ceci est le site de l'<a href="https://www.facebook.com/" >Facebook</a>
 			</p>
 
 			<p>
