--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8">
-		<title>Test HTML5</title>
+		<title>Eco-Reef</title>
 		<meta name="description" content="">
+		<link rel="stylesheet" href="style.css">
+		
 	</head>
 	<body>
 		<!-- ici mon corps de page -->
