--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
 		<title>Eco-Reef</title>
 		<meta name="description" content="">
 		<link rel="stylesheet" href="style.css">
-		
-	</head>
+
+		</head>
 	<body>
 		<!-- ici mon corps de page -->
 
 		<!-- une balise pour centrer -->
 		<center>
 
+        <h1> Sauvegarder les coraux à la Réunion </h1>
+
+            <p>
+            
+            	Le projet « Eco-Reef » est né d’un triste constat, celui de voir nos lagons ainsi que nos récifs dévastés par les phénomènes de réchauffement climatique, de pollution mais aussi de braconnage.
+            
+            <h1> PROBLÉMATIQUE </h1>
+
+            <p>
+            	Comment préserver et rendre accessible les récifs coralliens tout en intégrant l'utilisateur dans une démarche inclusive et écoresponsable ? 
+            </p>
+
 			<p>
-				ceci est le site de l'<a href="https://www.facebook.com/" >Facebook</a>
+				Pour contribuer à la <b>sauvegarde</b> de nos récifs coralliens vous pouvez <b>visiter</b> notre page <a href="https://www.facebook.com/" > <u>Facebook<u/> </a>
 			</p>
 
 			<p>
@@ -72,3 +84,4 @@
 
 	</body>
 </html>
+
